# mdbook-generate-summary

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  summary_entry.rs
tests/: cli.rs
